--- a/_posts/2019-10-17-aep-modes.md
+++ b/_posts/2019-10-17-aep-modes.md
@@ -61,7 +61,7 @@ In order to get into NUMA mode:
       `lsmod | grep kmem`
 
 The last step has two methods, depending on whether you want the memory in
-`ZONE_NORMAL` or `ZONE_MOVABLE`. [This post]({{ site.baseurl }}{% link 2019-09-13-memory-zone-subtleties.md %})
+`ZONE_NORMAL` or `ZONE_MOVABLE`. [This post](2019-09-13-memory-zone-subtleties.md)
 explains this conundrum in excrutiating detail.
 
 ### ZONE\_NORMAL
