Cleaning up most recent post

--- a/_posts/2019-10-17-aep-modes.md
+++ b/_posts/2019-10-17-aep-modes.md
@@ -32,13 +32,16 @@ In order to get into NUMA mode:
   3. Use `ipmctl` to put each individual AEP DIMM into AppDirect mode:
      To do this to all AEP on socket 0, do:
 
-     `ipmctl create -goal -socket 0 PersistentMemoryType=AppDirect`
+     {% highlight BASH %}
+     ipmctl create -goal -socket 0 PersistentMemoryType=AppDirect{% endhighlight %}
+
      Reboot.
 
   4. Now the DIMMs that you chose from the previous command will show as one distinct memory region in
      `ipmctl`. However, you need `ndctl` and `daxctl` to bind this region to the appropriate kernel driver.
 
-     `git clone https://github.com/pmem/ndctl.git`
+     {% highlight BASH %}
+     git clone https://github.com/pmem/ndctl.git{% endhighlight %}
 
   5. Build the project.
   6. Migrate the device model. This writes to the file `/etc/modprobe.d/daxctl.conf`. If it doesn't, then
@@ -46,19 +49,23 @@ In order to get into NUMA mode:
      the source directory doesn't work). Reboot again.
   7. View the memory regions that you created with `ipmctl`, using `ndctl`:
      
-     `ndctl list -R`
+     {% highlight BASH %}
+     ndctl list -R{% endhighlight %}
 
   8. Create a namespace consisting of that region:
 
-     `ndctl create-namespace --region region0 -m dax`
+     {% highlight BASH %}
+     ndctl create-namespace --region region0 -m dax{% endhighlight %}
 
   9. Ensure you *don't* have `dax_pmem_compat` running: 
 
-     `lsmod | grep "dax_pmem_compat"`
+     {% highlight BASH %}
+     lsmod | grep "dax_pmem_compat"{% endhighlight %}
 
   10. Ensure you *do* have `kmem` running:
      
-      `lsmod | grep kmem`
+      {% highlight BASH %}
+      lsmod | grep kmem{% endhighlight %}
 
 The last step has two methods, depending on whether you want the memory in
 `ZONE_NORMAL` or `ZONE_MOVABLE`. [This post](../../../09/13/memory-zone-subtleties/)
@@ -72,15 +79,18 @@ If you have the kernel configuration `CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE`, do 
      `dax1.0`, etc. This will list the namespaces, and within these should be
      the device that they're associated with:
 
-     `ndctl list -N`
+     {% highlight BASH %}
+     ndctl list -N{% endhighlight %}
 
   2. Unbind from the `device_dax` driver:
 
-     `echo dax0.0 > /sys/bus/dax/drivers/device_dax/unbind`
+     {% highlight BASH %}
+     echo dax0.0 > /sys/bus/dax/drivers/device_dax/unbind{% endhighlight %}
 
   3. Bind to the `kmem` driver:
 
-     `echo dax0.0 > /sys/bus/dax/drivers/kmem/new_id`
+     {% highlight BASH %}
+     echo dax0.0 > /sys/bus/dax/drivers/kmem/new_id{% endhighlight %}
 
 If you don't have that configuration, then use the `daxctl` utility to do it for you:
 
