--- a/_posts/2019-10-17-aep-modes.md
+++ b/_posts/2019-10-17-aep-modes.md
@@ -35,9 +35,7 @@ In order to get into NUMA mode:
      {% highlight BASH %}
      ipmctl create -goal -socket 0 PersistentMemoryType=AppDirect{% endhighlight %}
 
-     Reboot.
-
-  4. Now the DIMMs that you chose from the previous command will show as one distinct memory region in
+  4. Reboot. Now the DIMMs that you chose from the previous command will show as one distinct memory region in
      `ipmctl`. However, you need `ndctl` and `daxctl` to bind this region to the appropriate kernel driver.
 
      {% highlight BASH %}
