Cleaning up post

--- a/_posts/2019-10-17-aep-modes.md
+++ b/_posts/2019-10-17-aep-modes.md
@@ -37,9 +37,12 @@ In order to get into NUMA mode:
 
   4. Reboot. Now the DIMMs that you chose from the previous command will show as one distinct memory region in
      `ipmctl`. However, you need `ndctl` and `daxctl` to bind this region to the appropriate kernel driver.
+     The `git checkout` command is only necessary if you want to later use this utility to online your memory
+     as `ZONE_NORMAL`, and if `v67` hasn't been released yet.
 
      {% highlight BASH %}
-     git clone https://github.com/pmem/ndctl.git{% endhighlight %}
+     git clone https://github.com/pmem/ndctl.git
+     git checkout 3fdaf7ed512ac564a78d6d2c7152be218e39c3c1{% endhighlight %}
 
   5. Build the project.
   6. Migrate the device model. This writes to the file `/etc/modprobe.d/daxctl.conf`. If it doesn't, then
@@ -69,9 +72,9 @@ The last step has two methods, depending on whether you want the memory in
 `ZONE_NORMAL` or `ZONE_MOVABLE`. [This post](../../../09/13/memory-zone-subtleties/)
 explains this conundrum in excrutiating detail.
 
-### ZONE\_NORMAL
-
-If you have the kernel configuration `CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE`, do this:
+If you have the kernel configuration `CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE`, you can
+manually bind the memory to the correct driver, and the kernel will automatically online
+the memory as `ZONE_NORMAL` for you:
 
   1. Find the device that you want to bind. Examples include `dax0.0`,
      `dax1.0`, etc. This will list the namespaces, and within these should be
@@ -90,50 +93,19 @@ If you have the kernel configuration `CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE`, do 
      {% highlight BASH %}
      echo dax0.0 > /sys/bus/dax/drivers/kmem/new_id{% endhighlight %}
 
-If you don't have that configuration, then use the `daxctl` utility to do it for you:
+If you don't have that configuration, then use the `daxctl` utility to do it
+for you. Keep in mind that if you have version `v66` and didn't do the `git
+checkout` command above, you won't have the `--no-movable` option.
 
-  1. Clone the `ndctl` project, which includes `daxctl`:
-
+  1a. For `ZONE_MOVABLE`:
+     
      {% highlight BASH %}
-     git clone https://github.com/pmem/ndctl.git{% endhighlight %}
+     daxctl reconfigure-device --mode=system-ram all{% endhighlight %}
 
-  2. At the time of writing, the latest release (v66) automatically onlines your memory as `ZONE_MOVABLE`.
-     The next release will likely have the `--no-movable` flag implemented, but for now, checkout the commit
-     that implements this:
-
-     {% highlight BASH %}
-     git checkout 3fdaf7ed512ac564a78d6d2c7152be218e39c3c1{% endhighlight %}
-
-  3. Compile the project:
-
-     {% highlight BASH %}
-     ./configure
-     make{% endhighlight %}
-    
-  4. Use `daxctl` to do the last step automatically for you:
+  1b. For `ZONE_NORMAL`:
 
      {% highlight BASH %}
      daxctl reconfigure-device --no-movable --mode=system-ram all{% endhighlight %}
-
-### ZONE\_MOVABLE
-
-There is no manual method for automatically onlining the memory as `ZONE_MOVABLE`, so you need to use `daxctl`.
-
-  1. Clone the `ndctl` project, which includes `daxctl`:
-
-     {% highlight BASH %}
-     git clone https://github.com/pmem/ndctl.git{% endhighlight %}
-
-  3. Compile the project:
-
-     {% highlight BASH %}
-     ./configure
-     make{% endhighlight %}
-    
-  4. Use `daxctl` to do the last step automatically for you. This command defaults to `ZONE_MOVABLE`:
-
-     {% highlight BASH %}
-     daxctl reconfigure-device --mode=system-ram all{% endhighlight %}
 
 ## 2LM Mode
 
