--- a/_posts/2019-10-17-aep-modes.md
+++ b/_posts/2019-10-17-aep-modes.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      AEP Modes
+title:      
 date:       2019-10-17
 summary:    How to use AEP DIMMs in the various modes.
 categories: jekyll
@@ -32,17 +32,15 @@ In order to get into NUMA mode:
   3. Use `ipmctl` to put each individual AEP DIMM into AppDirect mode:
      To do this to all AEP on socket 0, do:
 
-     {% highlight BASH %}
-     ipmctl create -goal -socket 0 PersistentMemoryType=AppDirect{% endhighlight %}
+     `ipmctl create -goal -socket 0 PersistentMemoryType=AppDirect`
 
   4. Reboot. Now the DIMMs that you chose from the previous command will show as one distinct memory region in
      `ipmctl`. However, you need `ndctl` and `daxctl` to bind this region to the appropriate kernel driver.
      The `git checkout` command is only necessary if you want to later use this utility to online your memory
      as `ZONE_NORMAL`, and if `v67` hasn't been released yet.
 
-     {% highlight BASH %}
-     git clone https://github.com/pmem/ndctl.git
-     git checkout 3fdaf7ed512ac564a78d6d2c7152be218e39c3c1{% endhighlight %}
+     `git clone https://github.com/pmem/ndctl.git
+     git checkout 3fdaf7ed512ac564a78d6d2c7152be218e39c3c1`
 
   5. Build the project.
   6. Migrate the device model. This writes to the file `/etc/modprobe.d/daxctl.conf`. If it doesn't, then
@@ -50,23 +48,19 @@ In order to get into NUMA mode:
      the source directory doesn't work). Reboot again.
   7. View the memory regions that you created with `ipmctl`, using `ndctl`:
      
-     {% highlight BASH %}
-     ndctl list -R{% endhighlight %}
+     `ndctl list -R`
 
   8. Create a namespace consisting of that region:
 
-     {% highlight BASH %}
-     ndctl create-namespace --region region0 -m dax{% endhighlight %}
+     `ndctl create-namespace --region region0 -m dax`
 
   9. Ensure you *don't* have `dax_pmem_compat` running: 
 
-     {% highlight BASH %}
-     lsmod | grep "dax_pmem_compat"{% endhighlight %}
+     `lsmod | grep "dax_pmem_compat"`
 
   10. Ensure you *do* have `kmem` running:
      
-      {% highlight BASH %}
-      lsmod | grep kmem{% endhighlight %}
+      `lsmod | grep kmem`
 
 The last step has two methods, depending on whether you want the memory in
 `ZONE_NORMAL` or `ZONE_MOVABLE`. [This post](../../../09/13/memory-zone-subtleties/)
@@ -80,18 +74,15 @@ the memory as `ZONE_NORMAL` for you:
      `dax1.0`, etc. This will list the namespaces, and within these should be
      the device that they're associated with:
 
-     {% highlight BASH %}
-     ndctl list -N{% endhighlight %}
+     `ndctl list -N`
 
   2. Unbind from the `device_dax` driver:
 
-     {% highlight BASH %}
-     echo dax0.0 > /sys/bus/dax/drivers/device_dax/unbind{% endhighlight %}
+     `echo dax0.0 > /sys/bus/dax/drivers/device_dax/unbind`
 
   3. Bind to the `kmem` driver:
 
-     {% highlight BASH %}
-     echo dax0.0 > /sys/bus/dax/drivers/kmem/new_id{% endhighlight %}
+     `echo dax0.0 > /sys/bus/dax/drivers/kmem/new_id`
 
 If you don't have that configuration, then use the `daxctl` utility to do it
 for you. Keep in mind that if you have version `v66` and didn't do the `git
@@ -99,13 +90,11 @@ checkout` command above, you won't have the `--no-movable` option.
 
   1a. For `ZONE_MOVABLE`:
      
-     {% highlight BASH %}
-     daxctl reconfigure-device --mode=system-ram all{% endhighlight %}
+     `daxctl reconfigure-device --mode=system-ram all`
 
   1b. For `ZONE_NORMAL`:
 
-     {% highlight BASH %}
-     daxctl reconfigure-device --no-movable --mode=system-ram all{% endhighlight %}
+     `daxctl reconfigure-device --no-movable --mode=system-ram all`
 
 ## 2LM Mode
 
@@ -113,10 +102,11 @@ In order to get back into 2LM mode:
 
   1. Switch to "2LM" mode in the BIOS.
   2. Disable and destroy all namespaces:
-    {% highlight BASH %}
+    ```
     ndctl list -N
     ndctl disable-namespace namespace0.0
-    ndctl destroy-namespace namespace0.0{% endhighlight %}
+    ndctl destroy-namespace namespace0.0
+    ```
   3. Disable all regions:
     {% highlight BASH %}
     ndctl list -R
