--- a/_posts/2019-10-17-aep-modes.md
+++ b/_posts/2019-10-17-aep-modes.md
@@ -102,11 +102,10 @@ In order to get back into 2LM mode:
 
   1. Switch to "2LM" mode in the BIOS.
   2. Disable and destroy all namespaces:
-    ```
+    {% highlight BASH %}
     ndctl list -N
     ndctl disable-namespace namespace0.0
-    ndctl destroy-namespace namespace0.0
-    ```
+    ndctl destroy-namespace namespace0.0{% endhighlight %}
   3. Disable all regions:
     {% highlight BASH %}
     ndctl list -R
