--- a/_posts/2019-10-17-aep-modes.md
+++ b/_posts/2019-10-17-aep-modes.md
@@ -106,16 +106,20 @@ In order to get back into 2LM mode:
     ```bash
     ndctl list -N
     ndctl disable-namespace namespace0.0
-    ndctl destroy-namespace namespace0.0{% endhighlight %}
+    ndctl destroy-namespace namespace0.0
     ```
 
   3. Disable all regions:
+
     {% highlight BASH %}
     ndctl list -R
     ndctl disable-region region0
     ndctl disable-region region1{% endhighlight %}
+
   4. Put all of each socket's memory in Memory Mode:
+
     {% highlight BASH %}
     ipmctl create -goal -socket 0 MemoryMode=100
     ipmctl create -goal -socket 1 MemoryMode=100{% endhighlight %}
+
   5. Reboot again.
