--- a/_posts/2019-10-17-aep-modes.md
+++ b/_posts/2019-10-17-aep-modes.md
@@ -39,8 +39,8 @@ In order to get into NUMA mode:
      The `git checkout` command is only necessary if you want to later use this utility to online your memory
      as `ZONE_NORMAL`, and if `v67` hasn't been released yet.
 
-     `git clone https://github.com/pmem/ndctl.git
-     git checkout 3fdaf7ed512ac564a78d6d2c7152be218e39c3c1`
+     `git clone https://github.com/pmem/ndctl.git`
+     `git checkout 3fdaf7ed512ac564a78d6d2c7152be218e39c3c1`
 
   5. Build the project.
   6. Migrate the device model. This writes to the file `/etc/modprobe.d/daxctl.conf`. If it doesn't, then
@@ -88,11 +88,11 @@ If you don't have that configuration, then use the `daxctl` utility to do it
 for you. Keep in mind that if you have version `v66` and didn't do the `git
 checkout` command above, you won't have the `--no-movable` option.
 
-  1a. For `ZONE_MOVABLE`:
+  1. For `ZONE_MOVABLE`:
      
      `daxctl reconfigure-device --mode=system-ram all`
 
-  1b. For `ZONE_NORMAL`:
+  2. For `ZONE_NORMAL`:
 
      `daxctl reconfigure-device --no-movable --mode=system-ram all`
 
@@ -103,21 +103,19 @@ In order to get back into 2LM mode:
   1. Switch to "2LM" mode in the BIOS.
   2. Disable and destroy all namespaces:
 
-    ndctl list -N
-    ndctl disable-namespace namespace0.0
-    ndctl destroy-namespace namespace0.0
+    `ndctl list -N`
+    `ndctl disable-namespace namespace0.0`
+    `ndctl destroy-namespace namespace0.0`
 
   3. Disable all regions:
 
-    {% highlight BASH %}
-    ndctl list -R
-    ndctl disable-region region0
-    ndctl disable-region region1{% endhighlight %}
+    `ndctl list -R`
+    `ndctl disable-region region0`
+    `ndctl disable-region region1`
 
   4. Put all of each socket's memory in Memory Mode:
 
-    {% highlight BASH %}
-    ipmctl create -goal -socket 0 MemoryMode=100
-    ipmctl create -goal -socket 1 MemoryMode=100{% endhighlight %}
+    `ipmctl create -goal -socket 0 MemoryMode=100`
+    `ipmctl create -goal -socket 1 MemoryMode=100`
 
   5. Reboot again.
